# docs/swagger.json
@@ -133,7 +133,7 @@
         },
         "/v1/order/emoney": {
             "post": {
-                "description": "Pulsa user",
+                "description": "Emoney user",
                 "consumes": [
                     "application/json"
                 ],
@@ -143,7 +143,7 @@
                 "tags": [
                     "UserOrder"
                 ],
-                "summary": "Order Pulsa",
+                "summary": "Order Emoney",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -168,6 +168,30 @@
                     "UserOrder"
                 ],
                 "summary": "Order PaketData",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": true
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/order/pulsa": {
+            "post": {
+                "description": "Pulsa user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "UserOrder"
+                ],
+                "summary": "Order Pulsa",
                 "responses": {
                     "200": {
                         "description": "OK",
